# minimax_tic_tac_toe

./: Cargo.toml  README.md
minimax_ttt/: Cargo.toml  README.md  minimax_ttt.d.ts  package.json
minimax_ttt/src/: lib.rs
src/: main.rs
